--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body {
 	
 }
 
+
+p1 {
+	font-size: 25px;
+	color: #ffffff;
+} 
+
 /* You should know what the class does just by looking at the name (the name should be DESCRIPTIVE) */
 .big-row {
 	height: 50%;
@@ -26,6 +32,14 @@ body {
 	
 	
 } 
+
+.text { 
+	display:flex;
+	height: 50%;
+	
+} 
+
+
 .pointer {
 	cursor: pointer;
 } 
@@ -46,10 +60,7 @@ transform: scale(1.3);
 
 
 
-.thirdbox{
-	height:100%;
-	width: calc(100%/3);
-}	
+
 
 .thirdbox2{
 	height:100%;
@@ -60,8 +71,30 @@ transform: scale(1.3);
 	height:100%;
 	width: calc(100%/3);
 	display:flex;
-	;
+	
 }	
+
+
+.thirdbox{
+	height:100%;
+	width: calc(100%/3);
+	display:block;
+}	
+
+.scrambledwords { 
+	height:25%;
+	width:100;
+	
+}
+
+.your-answer { 
+	height:50%;
+	width:100%;
+	display:flex;
+
+} 
+
+
 .thirdbox4{
 	height:100%;
 	width: calc(100%/3);
